--- a/page03.html
+++ b/page03.html
@@ -435,7 +435,7 @@
     ]
 }
 
-            let color = d3.scaleOrdinal(['#4daf4a','#377eb8','#ff7f00','#984ea3','#e41a1c','#4daf4a','#377eb8','#ff7f00']);
+            let color = d3.scaleOrdinal(['red','yellow','blue','green','#6A5ACD','#00CED1','#DAA520','#BC8F8F']);
 
             let margin = 75,
                 width = 1400,
